Version 0.2.5
-------------
  - Revert the _Random_ indices for output files, just create multiple
  - Correct dependency on Str in META.

Version 0.2.4 (2015-08-14):
---------------------------
  - Fast mode returns: create one array to track instrumented points per
    implementation file (module). Created a separate findlib package:
    bisect_ppx.fast to implement this method (just calls the ppx rewriter
    with the appropriate argument).
  - Runtime logging now default to a file: bisect.log. To regain original
    behavior set BISECT_SILENT=ERR. You can use the same variable to set
    a filename.
  - Fixed bug for creating html reports off of implicit filenames.

Version 0.2.3 (2015-06-17):
--------------------------
  - @hnrgrgr Fixed more comment lexing bugs

Version 0.2.2 (2015-06-12):
---------------------------
  - Added a runtime only package distribution for findlib.
  - Change the points annotation method, 'For' loops are correctly labeled.
    - Updated appropriate test.
  - When linking with '-thread' _Random_ indices are used for the output files.
  - @simonjbeaumont, fix for exclusions of locally abstract typed definitions.

Version 0.2.1 (2015-05-22):
---------------------------
  - fix double slashes at the end of a string bug, due to BISECT
    specifiy commenting.

Version 0.2 (2015-05-15):
-------------------------
  - fix bug to make sure that we don't instrument other ppx attributes.

Version 0.1 (2015-05-06):
-------------------------
  - start versioning for bisect_ppx (just the ppx no CamlP4) of Bisect. 
    - Original bisect (changes below).

Version 1.3 (2012-11-03):
-------------------------
  - new instrumenter based on '-ppx'
  - new '-summary-only' to output only summary (text mode only)
  - refactoring, including minor bugfixes
  - bug#86: '-ocaml-prefix' doesn't really work
  - bug#87: install shouldn't build anything
  - bug#89: do not activate warnings by default

Version 1.2 (2012-08-14):
-------------------------