@@ -1,0 +1,8 @@
+let _ = Bisect.Runtime.init "expr_comment.ml"
+let x = Bisect.Runtime.mark "expr_comment.ml" 0; 3
+let y = Bisect.Runtime.mark "expr_comment.ml" 1; [1; 2; 3]
+let z = Bisect.Runtime.mark "expr_comment.ml" 2; [|1;2;3|]
+let f x = print_endline x
+let f' x = let x' = String.uppercase x in print_endline x'
+let g x y z = (x + y) * z
+let g' x y = print_endline x; print_endline y
