@@ -2,6 +2,7 @@ Version 0.2.5
 -------------
   - Revert the _Random_ indices for output files, just create multiple
   - Correct dependency on Str in META.
+  - Obey OCamls line directive when looking for BISECT comments.
 
 Version 0.2.4 (2015-08-14):
 ---------------------------
